--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dots_indicator: ^3.0.0
   riverpod_generator: ^2.3.9
   build_runner: ^2.4.7
+  fluttertoast: 8.2.4
 
 dev_dependencies:
   flutter_test:
