--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   riverpod_generator: ^2.3.9
   build_runner: ^2.4.7
   fluttertoast: 8.2.4
+  firebase_auth: ^4.15.2
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
