--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.15.2
   firebase_core: ^2.24.2
   cloud_firestore: ^4.13.6
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
